local-setup/kustomize/components/openbao-provider/helmreleases.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openbao-provider
